--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -1,8 +1,74 @@
+@article{Allenby:1998,
+	title = {Marketing models of consumer heterogeneity},
+	journal = {Journal of Econometrics},
+	volume = {89},
+	number = {1},
+	pages = {57-78},
+	year = {1998},
+	author = {Greg M. Allenby and Peter E. Rossi}
+}
+
+@ARTICLE{Bhat:2011,
+	author = {Bhat, Chandra},
+	year = {2011},
+	title = {The Maximum Approximate Composite Marginal Likelihood (MACML) Estimation of Multinomial Probit-Based Unordered Response Choice Models},
+	volume = {45},
+	journal = {Transportation Research Part B: Methodological}
+}
+
+@article{Bierlaire:2010,
+	author = {Bierlaire, Michel and Thémans, Michaël and Zufferey, Nicolas},
+	year = {2010},
+	title = {A Heuristic for Nonlinear Global Optimization},
+	volume = {22},
+	journal = {INFORMS Journal on Computing},
+}
+
+@article{Bolduc:1999,
+	title = {A practical technique to estimate multinomial probit models in transportation},
+	journal = {Transportation Research Part B: Methodological},
+	volume = {33},
+	number = {1},
+	pages = {63-79},
+	year = {1999},
+	author = {Denis Bolduc}
+}
+
 @book{Bonnans:2006,
   title     = {Numerical optimization: theoretical and practical aspects},
   author    = {Bonnans, Joseph-Fr{\'e}d{\'e}ric and Gilbert, Jean Charles and Lemar{\'e}chal, Claude and Sagastiz{\'a}bal, Claudia A},
   year      = {2006},
   publisher = {Springer Science \& Business Media}
+}
+
+@article{Haaijer:1998,
+	author = {Rinus Haaijer and Michel Wedel and Marco Vriens and Tom Wansbeek},
+	journal = {Marketing Science},
+	number = {3},
+	pages = {236--252},
+	publisher = {INFORMS},
+	title = {Utility Covariances and Context Effects in Conjoint MNP Models},
+	volume = {17},
+	year = {1998}
+}
+
+@article{Joe:1995,
+	author = {Harry Joe},
+	title = {Approximations to Multivariate Normal Rectangle Probabilities Based on Conditional Expectations},
+	journal = {Journal of the American Statistical Association},
+	volume = {90},
+	number = {431},
+	year  = {1995},
+	publisher = {Taylor & Francis}
+}
+
+@Article{Nash:2011,
+	title = {Unifying Optimization Algorithms to Aid Software System Users: {optimx} for {R}},
+	author = {John C. Nash and Ravi Varadhan},
+	journal = {Journal of Statistical Software},
+	year = {2011},
+	volume = {43},
+	number = {9}
 }
 
 @article{Nocedal:2006,
@@ -13,3 +79,33 @@
   year      = {2006},
   publisher = {Springer}
 }
+
+@article{Paap:2000,
+	author = {Richard Paap and Philip Hans Franses},
+	journal = {Journal of Applied Econometrics},
+	number = {6},
+	pages = {717--744},
+	publisher = {Wiley},
+	title = {A Dynamic Multinomial Probit Model for Brand Choice with Different Long-Run and Short-Run Effects of Marketing-Mix Variables},
+	volume = {15},
+	year = {2000}
+}
+
+@article{Shin:2015,
+	title = {Consumer preferences and willingness to pay for advanced vehicle technology options and fuel types},
+	journal = {Transportation Research Part C: Emerging Technologies},
+	volume = {60},
+	year = {2015},
+	author = {Jungwoo Shin and Chandra R. Bhat and Daehyun You and Venu M. Garikapati and Ram M. Pendyala}
+}
+
+@BOOK{Train:2009,
+	title        = {Discrete choice methods with simulation},
+	author       = {Train, Kenneth},
+	language     = {eng},
+	edition      = {2. ed.},
+	publisher    = {Cambridge Univ. Press},
+	year         = {2009}
+}
+
+
